简化配置系统