@@ -2,13 +2,14 @@ package io.github.forgestove.create_cyber_goggles.config;
 import com.electronwill.nightconfig.core.CommentedConfig;
 import com.electronwill.nightconfig.core.file.CommentedFileConfig;
 import io.github.forgestove.create_cyber_goggles.config.annotation.*;
+import io.github.forgestove.create_cyber_goggles.config.client.Translation;
+import net.neoforged.fml.loading.FMLPaths;
 
 import java.awt.Point;
 import java.io.BufferedWriter;
 import java.lang.reflect.Field;
 import java.nio.file.*;
 import java.util.*;
-import java.util.function.*;
 /**
  * 通用的TOML配置序列化工具，支持本地化注释。
  *
@@ -16,32 +17,30 @@ import java.util.function.*;
  */
 public final class ConfigSerializer<C> {
 	private final Class<C> configClass;
-	private final Supplier<Path> configPath;
+	private final Path configPath;
 	private final String translationPrefix;
-	private final Function<String, String> translator;
 	private ConfigSerializer(Builder<C> builder) {
 		configClass = builder.configClass;
-		configPath = builder.configPath;
-		translationPrefix = builder.translationPrefix;
-		translator = builder.translator;
+		var modId = ConfigRegistry.getModId(configClass);
+		configPath = FMLPaths.CONFIGDIR.get().resolve(modId + ".toml");
+		translationPrefix = modId + ".config";
 	}
 	public static <C> Builder<C> builder(Class<C> configClass) {
 		return new Builder<>(configClass);
 	}
 	public void serialize(C config) throws SerializationException {
-		var path = configPath.get();
-		try (var writer = Files.newBufferedWriter(path)) {
+		try (var writer = Files.newBufferedWriter(configPath)) {
 			for (var categoryField : getCategoryFields()) {
 				categoryField.setAccessible(true);
-				writeCategoryToml(writer, categoryField.get(config), categoryField.getName(), "");
+				writeCategoryToml(writer, categoryField.get(config), categoryField.getName());
 			}
 		} catch (Exception e) {
 			throw new SerializationException(e);
 		}
 	}
 	public C deserialize() throws SerializationException {
-		if (!configPath.get().toFile().exists()) return newInstance();
-		try (var fileConfig = CommentedFileConfig.builder(configPath.get()).build()) {
+		if (!configPath.toFile().exists()) return newInstance();
+		try (var fileConfig = CommentedFileConfig.builder(configPath).build()) {
 			fileConfig.load();
 			var config = newInstance();
 			var fallbackValues = buildFlatValueMap(fileConfig);
@@ -72,10 +71,9 @@ public final class ConfigSerializer<C> {
 		}
 	}
 	private Field[] getCategoryFields() {
-		return Arrays.stream(configClass.getDeclaredFields())
-			.filter(f -> f.isAnnotationPresent(Category.class))
-			.sorted(Comparator.comparingInt(this::orderedFieldIndex))
-			.toArray(Field[]::new);
+		List<Field> list = new ArrayList<>();
+		for (var field : getOrderedFields(configClass)) if (field.isAnnotationPresent(Category.class)) list.add(field);
+		return list.toArray(new Field[0]);
 	}
 	/**
 	 * 对给定类的字段按 {@link Order @Order} 注解值排序。
@@ -96,11 +94,7 @@ public final class ConfigSerializer<C> {
 	private Map<String, Integer> orderCache(Field[] fields) {
 		var map = new HashMap<String, Integer>();
 		for (var i = 0; i < fields.length; i++) map.put(fields[i].getName(), i);
-		return Map.copyOf(map);
-	}
-	private int orderedFieldIndex(Field f) {
-		var ann = f.getAnnotation(Order.class);
-		return ann != null ? ann.value() : 0;
+		return map;
 	}
 	private C newInstance() throws SerializationException {
 		try {
@@ -109,40 +103,42 @@ public final class ConfigSerializer<C> {
 			throw new SerializationException(e);
 		}
 	}
-	private void writeCategoryToml(BufferedWriter writer, Object category, String pathPrefix, String indent) throws Exception {
+	private void writeCategoryToml(BufferedWriter writer, Object category, String pathPrefix) throws Exception {
 		var comment = translate("category." + pathPrefix);
-		if (comment != null) writer.write(indent + "# " + comment.trim() + "\n");
-		writer.write(indent + "[" + pathPrefix + "]\n");
+		if (comment != null) writer.write("# %s\n".formatted(comment.trim()));
+		writer.write("[%s]\n".formatted(pathPrefix));
 		var fields = getOrderedFields(category.getClass());
 		for (var field : fields) {
 			field.setAccessible(true);
 			if (field.isAnnotationPresent(Category.class)) {
-				writeFieldComment(writer, indent, pathPrefix, field.getName());
-				writeCategoryToml(writer, field.get(category), pathPrefix + "." + field.getName(), indent + "\t");
+				writeFieldComment(writer, pathPrefix, field.getName());
+				writeCategoryToml(writer, field.get(category), "%s.%s".formatted(pathPrefix, field.getName()));
 				continue;
 			}
-			writeFieldComment(writer, indent, pathPrefix, field.getName());
+			writeFieldComment(writer, pathPrefix, field.getName());
 			var value = field.get(category);
 			if (field.isAnnotationPresent(ColorValue.class)) {
 				var hasAlpha = field.getAnnotation(ColorValue.class).value();
-				var hex = hasAlpha ? String.format("0x%08X", (Integer) value) : String.format("0x%06X", (Integer) value);
-				writer.write(indent + "\t" + field.getName() + " = " + hex + "\n");
-			} else if (value instanceof Enum<?> e) writer.write(indent + "\t" + field.getName() + " = \"" + e.name() + "\"\n");
-			else if (value instanceof Point p) writer.write(indent + "\t" + field.getName() + " = \"" + p.x + ", " + p.y + "\"\n");
-			else if (value instanceof String s) writer.write(indent + "\t" + field.getName() + " = \"" + s + "\"\n");
-			else writer.write(indent + "\t" + field.getName() + " = " + value + "\n");
+				var hex = (hasAlpha ? "0x%08X" : "0x%06X").formatted(value);
+				writer.write("\t%s = %s\n".formatted(field.getName(), hex));
+			} else switch (value) {
+				case Enum<?> e -> writer.write("\t%s = \"%s\"\n".formatted(field.getName(), e.name()));
+				case Point p -> writer.write("\t%s = \"%d, %d\"\n".formatted(field.getName(), p.x, p.y));
+				case String s -> writer.write("\t%s = \"%s\"\n".formatted(field.getName(), s));
+				default -> writer.write("\t%s = %s\n".formatted(field.getName(), value));
+			}
 		}
 	}
-	private void writeFieldComment(BufferedWriter writer, String indent, String pathPrefix, String fieldName) throws Exception {
+	private void writeFieldComment(BufferedWriter writer, String pathPrefix, String fieldName) throws Exception {
 		var comment = buildFieldComment(pathPrefix, fieldName);
 		if (comment.isEmpty()) return;
 		for (var line : comment.split("\n")) {
 			var trimmed = line.stripTrailing();
-			if (!trimmed.isEmpty()) writer.write(indent + "\t# " + trimmed + "\n");
+			if (!trimmed.isEmpty()) writer.write("\t# %s\n".formatted(trimmed));
 		}
 	}
 	private String buildFieldComment(String categorySnake, String fieldName) {
-		var optionKey = "option." + categorySnake + "." + fieldName;
+		var optionKey = "option.%s.%s".formatted(categorySnake, fieldName);
 		var title = translate(optionKey);
 		var tooltip = translate(optionKey + ".tooltip");
 		var sb = new StringBuilder();
@@ -154,8 +150,9 @@ public final class ConfigSerializer<C> {
 		return sb.toString();
 	}
 	private String translate(String key) {
-		if (translator == null || translationPrefix == null) return null;
-		return translator.apply(translationPrefix + "." + key);
+		if (translationPrefix == null) return null;
+		key = "%s.%s".formatted(translationPrefix, key);
+		return Translation.getString(key);
 	}
 	/**
 	 * 递归遍历整个配置树，构建字段名→值的平铺映射。
@@ -174,13 +171,9 @@ public final class ConfigSerializer<C> {
 			else map.putIfAbsent(key, value);
 		}
 	}
-	@SuppressWarnings("unchecked")
-	private <T extends Enum<T>> void readCategory(
-		CommentedConfig config,
-		String categoryName,
-		Object category,
-		Map<String, Object> fallbackValues
-	) throws IllegalAccessException {
+	@SuppressWarnings({"rawtypes", "unchecked"})
+	private void readCategory(CommentedConfig config, String categoryName, Object category, Map<String, Object> fallbackValues) throws
+		IllegalAccessException {
 		CommentedConfig subConfig = config.get(categoryName);
 		for (var field : getOrderedFields(category.getClass())) {
 			field.setAccessible(true);
@@ -200,26 +193,14 @@ public final class ConfigSerializer<C> {
 						field.set(category, new Point(Integer.parseInt(parts[0].trim()), Integer.parseInt(parts[1].trim())));
 					} catch (NumberFormatException ignored) {}
 				} else if (value instanceof CommentedConfig cc) field.set(category, new Point(cc.getInt("x"), cc.getInt("y")));
-			} else if (type.isEnum()) field.set(category, Enum.valueOf((Class<T>) type, (String) value));
+			} else if (type.isEnum()) field.set(category, Enum.valueOf((Class) type, (String) value));
 			else field.set(category, value);
 		}
 	}
 	public static final class Builder<C> {
 		private final Class<C> configClass;
-		private Supplier<Path> configPath;
-		private String translationPrefix;
-		private Function<String, String> translator;
 		private Builder(Class<C> configClass) {
 			this.configClass = configClass;
-		}
-		public void path(Supplier<Path> configPath) {
-			this.configPath = configPath;
-		}
-		public void translationPrefix(String prefix) {
-			translationPrefix = prefix;
-		}
-		public void translator(Function<String, String> translator) {
-			this.translator = translator;
 		}
 		public ConfigSerializer<C> build() {
 			return new ConfigSerializer<>(this);
